[package]
name = "voxel"
version = "0.1.0"
authors = ["Yuuki Rika <yvvki@duck.com>"]
edition = "2021"
description = "Untitled voxel game"
repository = "https://github.com/yvvki/voxel"
license = "MIT OR Apache-2.0"
keywords = ["game", "gamedev", "video game", "voxel"]
categories = ["game-development", "games"]

[dependencies]
