[workspace]
members = []

[workspace.package]
version = "0.1.0"
authors = ["Yuuki Rika <yvvki@duck.com>"]
edition = "2021"
description = "Untitled voxel game"
repository = "https://github.com/yvvki/voxel"
license = "MIT OR Apache-2.0"
keywords = ["game", "gamedev", "video game", "voxel"]
categories = ["game-development", "games"]

[package]
name = "voxel"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
