[workspace]
members = []

[workspace.package]
version = "0.1.0"
authors = ["Yuuki Rika <yvvki@duck.com>"]
edition = "2021"
description = "Untitled voxel game"
repository = "https://github.com/yvvki/voxel"
license = "MIT OR Apache-2.0"
keywords = ["game", "gamedev", "video game", "voxel"]
categories = ["game-development", "games"]

[workspace.dependencies]
bevy = "0.13"

[package]
name = "voxel"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
